Clean and add comments

--- a/Create newspaper - speaker TF-IDF matrix.ipynb
+++ b/Create newspaper - speaker TF-IDF matrix.ipynb
@@ -543,7 +543,7 @@
    "id": "1bd9a8b0",
    "metadata": {},
    "source": [
-    "## Save TF-IDF matrix"
+    "### Save TF-IDF matrix"
    ]
   },
   {
@@ -554,24 +554,6 @@
    "outputs": [],
    "source": [
     "sparse.save_npz(FILE_NEWSPAPER_SPEAKER_TFIDF, newspaper_speaker_tfidf)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5d20966",
-   "metadata": {},
-   "source": [
-    "## Example to load TF-IDF matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "3fec0440",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "newspaper_speaker_tfidf = sparse.load_npz(FILE_NEWSPAPER_SPEAKER_TFIDF)"
    ]
   }
  ],
