--- a/Create newspaper - token TF-IDF matrix.ipynb
+++ b/Create newspaper - token TF-IDF matrix.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "b29de8a8",
-   "metadata": {},
-   "source": [
-    "## Create TF-IDF matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9b3ec6e6",
@@ -35,7 +27,8 @@
    "id": "f429a6b9",
    "metadata": {},
    "source": [
-    "## Create newspaper set"
+    "### Create newspaper set and indexes\n",
+    "We create the sorted set of newspapesr and the indexes to link the matrix entries to newspapers."
    ]
   },
   {
@@ -46,7 +39,9 @@
    "outputs": [],
    "source": [
     "df_speaker_newspaper = pd.read_csv(FILE_NEWSPAPER_SPEAKER_COUNT, compression='bz2') \n",
-    "newspapers = set(df_speaker_newspaper.newspaper)"
+    "newspapers = sorted(list(set(df_speaker_newspaper.newspaper)))\n",
+    "newspapers_to_index = {n:i for i, n in enumerate(newspapers)}\n",
+    "index_to_newspapers = {i:n for i, n in enumerate(newspapers)}"
    ]
   },
   {
@@ -54,7 +49,9 @@
    "id": "1ec0c6c8",
    "metadata": {},
    "source": [
-    "## Create token vocabulary"
+    "### Create token vocabulary and indexes\n",
+    "We create the sorted set of tokens and the indexes to link the matrix entries to tokens.\n",
+    "We iterate over all the quotes to create the vocabulary"
    ]
   },
   {
@@ -619,7 +616,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_voc = sorted(processed_voc)"
+    "sorted_voc = sorted(processed_voc)\n",
+    "\n",
+    "token_to_index = {n:i for i, n in enumerate(sorted_voc)}\n",
+    "index_to_token = {i:n for i, n in enumerate(sorted_voc)}\n",
+    "\n",
+    "with open(PICKLE_TOKEN_TO_INDEX, 'wb') as handle:\n",
+    "    pickle.dump(token_to_index,handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open(PICKLE_INDEX_TO_TOKEN, 'wb') as handle:\n",
+    "    pickle.dump(index_to_token, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -627,7 +633,8 @@
    "id": "22ad69b9",
    "metadata": {},
    "source": [
-    "## Create frequency matrix"
+    "### Create frequency matrix\n",
+    "We generate a frequency matrix #newspaper x #tokens: entry (i,j) is the number of time token j appears in newspaper i."
    ]
   },
   {
@@ -1173,10 +1180,6 @@
    "source": [
     "csv_reader = pd.read_csv(FILE_NEWSPAPER_TOKEN, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
     "\n",
-    "newspapers = sorted(list(newspapers))\n",
-    "newspapers_to_index = {n:i for i, n in enumerate(newspapers)}\n",
-    "index_to_newspapers = {i:n for i, n in enumerate(newspapers)}\n",
-    "\n",
     "def dummy(doc):\n",
     "    return doc\n",
     "vectorizer = CountVectorizer(tokenizer=dummy,preprocessor=dummy, vocabulary=sorted_voc) \n",
@@ -1212,7 +1215,8 @@
    "id": "e148cdb9",
    "metadata": {},
    "source": [
-    "## Create TF-IDF matrix"
+    "### Create TF-IDF matrix\n",
+    "Transform the frequency matrix into a TF-IDF matrix. Each row is normalised and each column is scaled by proportionnaly to the number of newspaper in which the speaker is quoted."
    ]
   },
   {
@@ -1233,7 +1237,7 @@
    "id": "13608642",
    "metadata": {},
    "source": [
-    "## Save TF-IDF matrix"
+    "### Save TF-IDF matrix"
    ]
   },
   {
@@ -1244,49 +1248,6 @@
    "outputs": [],
    "source": [
     "sparse.save_npz(FILE_NEWSPAPER_TOKEN_TFIDF, newspaper_token_tfidf)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8bbff53",
-   "metadata": {},
-   "source": [
-    "## Save token-index mapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04803e41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "token_to_index = {n:i for i, n in enumerate(sorted_voc)}\n",
-    "index_to_token = {i:n for i, n in enumerate(sorted_voc)}\n",
-    "\n",
-    "with open(PICKLE_TOKEN_TO_INDEX, 'wb') as handle:\n",
-    "    pickle.dump(token_to_index,handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "    \n",
-    "with open(PICKLE_INDEX_TO_TOKEN, 'wb') as handle:\n",
-    "    pickle.dump(index_to_token, handle, protocol=pickle.HIGHEST_PROTOCOL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "69a57b37",
-   "metadata": {},
-   "source": [
-    "## Example to load TF-IDF matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b20e69f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "newspaper_token_tfidf = sparse.load_npz(FILE_NEWSPAPER_TOKEN_TFIDF)"
    ]
   }
  ],
