--- a/PCA2D.ipynb
+++ b/PCA2D.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "85b2690c",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3f4dd0bf",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "a9c71c60",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "[420 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,8 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "67c9d91d",
+   "execution_count": 6,
+   "id": "5ce3e59a",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "[190 rows x 9 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "12104424",
    "metadata": {},
    "outputs": [],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "b1d56a96",
    "metadata": {},
    "outputs": [],
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "4477fb2d",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "12f1c8d3",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "c28b4be0",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "ecdf7062",
    "metadata": {},
    "outputs": [
@@ -1115,16 +1115,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f2e95b",
+   "id": "04d77aaa",
    "metadata": {},
    "source": [
-    "#### USA"
+    "#### USA speaker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "0af70ddf",
+   "execution_count": 13,
+   "id": "263f2490",
    "metadata": {},
    "outputs": [
     {
@@ -1272,8 +1272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "be6eda24",
+   "execution_count": 14,
+   "id": "bf357c77",
    "metadata": {},
    "outputs": [
     {
@@ -1294,9 +1294,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7f16f627",
+   "metadata": {},
+   "source": [
+    "#### USA tokens"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "0fcf3911",
+   "execution_count": 15,
+   "id": "0e45ce8e",
    "metadata": {},
    "outputs": [
     {
@@ -1444,8 +1452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "f9cc092c",
+   "execution_count": 16,
+   "id": "d8586274",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "18e0484e",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1499,7 @@
        "'2.4.2'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "f723024e",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "a61283a6",
    "metadata": {
     "scrolled": true
@@ -1616,7 +1624,8 @@
     "    p.legend.label_width = 0\n",
     "    \n",
     "    # Generate the graph\n",
-    "    bpl.show(p)"
+    "    bpl.show(p)\n",
+    "    return p"
    ]
   },
   {
@@ -1629,27 +1638,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "8b7ab47d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/jonas/Desktop/EPFL/Ma1/ADA/ada-2021-project-mahj/plot/newspaper_speaker_axis_0_1.html'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AXIS_1 = 0\n",
     "AXIS_2 = 1\n",
     "\n",
     "p = plot_scatter_bokeh(X_red_speaker[:,[AXIS_1,AXIS_2]],newspaper_in_group)\n",
-    "output_file(f'newspaper_speaker_axis_{AXIS_1}_{AXIS_2}.html',mode='inline')\n",
-    "\n",
-    "#TODO Remove if does not work\n",
-    "try: \n",
-    "    save(p)\n",
-    "except:\n",
-    "    pass"
+    "output_file(PLOT_FOLDER + f'newspaper_speaker_axis_{AXIS_1}_{AXIS_2}.html',mode='inline')\n",
+    "save(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dfc19c90",
    "metadata": {},
    "outputs": [],
@@ -1658,13 +1673,38 @@
     "AXIS_2 = 1\n",
     "\n",
     "p = plot_scatter_bokeh(X_red_token[:,[AXIS_1,AXIS_2]],newspaper_in_group)\n",
-    "output_file(f'newspaper_token_axis_{AXIS_1}_{AXIS_2}.html',mode='inline')\n",
+    "output_file(PLOT_FOLDER + f'newspaper_token_axis_{AXIS_1}_{AXIS_2}.html',mode='inline')\n",
+    "save(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0edf4b87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AXIS_1 = 0\n",
+    "AXIS_2 = 3\n",
     "\n",
-    "#TODO Remove if does not work\n",
-    "try: \n",
-    "    save(p)\n",
-    "except:\n",
-    "    pass"
+    "p = plot_scatter_bokeh(X_red_speaker_USA[:,[AXIS_1,AXIS_2]],newspaper_in_group_USA)\n",
+    "output_file(PLOT_FOLDER + f'newspaper_speaker_USA_axis_{AXIS_1}_{AXIS_2}.html',mode='inline')\n",
+    "save(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c607935f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AXIS_1 = 0\n",
+    "AXIS_2 = 3\n",
+    "\n",
+    "p = plot_scatter_bokeh(X_red_token_USA[:,[AXIS_1,AXIS_2]],newspaper_in_group_USA)\n",
+    "output_file(PLOT_FOLDER + f'newspaper_token_USA_axis_{AXIS_1}_{AXIS_2}.html',mode='inline')\n",
+    "save(p)"
    ]
   }
  ],
