Add text to scraping

--- a/Wikidata_scraping.ipynb
+++ b/Wikidata_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "43fa0d5f",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,10 @@
    "outputs": [],
    "source": [
     "def get_QIDS(newspaper):\n",
+    "    '''\n",
+    "    Manually scrape wikipedia to extract the list of potential QIDS for a newspaper using the newspaper's name\n",
+    "    as a query vector to wikipedia\n",
+    "    '''\n",
     "    url = f'https://www.wikidata.org/w/index.php?search={newspaper} \\\n",
     "    &title=Special%3ASearch&fulltext=1&ns0=1&ns120=1'\n",
     "    page = requests.get(url)    \n",
@@ -50,65 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "ace39108",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1011now', '101greatgoals', '1045theteam', ..., 'zerotackle',\n",
-       "       'zigwheels', 'zip06'], dtype=object)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(FILE_NEWSPAPER_SPEAKER_COUNT,compression='bz2')\n",
-    "\n",
-    "newspapers = df['newspaper'].unique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "84427a59",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7362\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['1011now', '101greatgoals', '1045theteam', ..., 'zerotackle',\n",
-       "       'zigwheels', 'zip06'], dtype=object)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(len(newspapers))\n",
-    "newspapers"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "62bf7b44",
+   "id": "8313a182",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv(FILE_NEWSPAPER_SPEAKER_COUNT,compression='bz2')\n",
+    "newspapers = df['newspaper'].unique()\n",
+    "\n",
     "#Dictionnary of newspaper and found QIDS\n",
     "newspapers_QIDS = {}\n",
     "\n",
@@ -116,8 +69,15 @@
     "    if(i%10==0):\n",
     "        print(f'Iteration {i+1}')\n",
     "    QIDS = get_QIDS(newspaper)\n",
-    "    print(newspaper,QIDS)\n",
     "    newspapers_QIDS[newspaper]=QIDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44701f98",
+   "metadata": {},
+   "source": [
+    "#### Save to disk"
    ]
   },
   {
@@ -153,6 +113,11 @@
     "repo = site.data_repository()\n",
     "\n",
     "def extract_website_owner(newspaper,QIDS):\n",
+    "    '''\n",
+    "    Query the wikidata API for each newspaper's potential QIDS and select the page containing \n",
+    "    the same url as the newspaper.\n",
+    "    Furthemore, extract the owner of the newspaper if available\n",
+    "    '''\n",
     "    current_QID = None\n",
     "    owner = None\n",
     "    official_website = None\n",
@@ -185,33 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "e6295440",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7362\n"
-     ]
-    }
-   ],
-   "source": [
-    "newspapers_QIDS = None\n",
-    "with open(PICKLE_NEWSPAPER_QID, 'rb') as handle:\n",
-    "    newspapers_QIDS = pickle.load(handle)\n",
-    "\n",
-    "print(len(newspapers_QIDS))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "941b11e7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "newspapers_QIDS = None\n",
+    "with open(PICKLE_NEWSPAPER_QID, 'rb') as handle:\n",
+    "    newspapers_QIDS = pickle.load(handle)\n",
+    "\n",
     "newspapers_info = {}\n",
     "\n",
     "for i, (newspaper,QIDS) in enumerate(newspapers_QIDS.items()):\n",
@@ -223,13 +170,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "c65b112b",
+   "cell_type": "markdown",
+   "id": "f90e789e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "missing = set(newspapers_QIDS.keys()).difference(set(newspapers_info.keys()))"
+    "Some newspaper lead to a crash while querying wikidata. As a consequence, we set their attributes to None."
    ]
   },
   {
@@ -239,30 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "missing = set(newspapers_QIDS.keys()).difference(set(newspapers_info.keys()))\n",
     "for m in missing:\n",
     "    newspapers_info[m] = (None,None,None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "id": "1b3e2959",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NEWSPAPER_INFO_PICKLE ='processed_data/newspaper_infos.pickle'\n",
-    "with open(NEWSPAPER_INFO_PICKLE, 'wb') as handle:\n",
-    "    pickle.dump(newspapers_info, handle, protocol=pickle.HIGHEST_PROTOCOL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "id": "f3f5ce8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flattened = [[k,v1,v2,v3]for k,(v1,v2,v3) in newspapers_info.items()]"
    ]
   },
   {
@@ -272,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "flattened = [[k,v1,v2,v3]for k,(v1,v2,v3) in newspapers_info.items()]\n",
     "df = pd.DataFrame(flattened,columns = ['newspaper','QID','website','owner'])"
    ]
   },
@@ -431,6 +356,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eeba854c",
+   "metadata": {},
+   "source": [
+    "#### Save to disk"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 135,
    "id": "9b9b0289",
@@ -445,7 +378,7 @@
    "id": "73969911",
    "metadata": {},
    "source": [
-    "### 3.For newspapers with QID, extract geographical information if available"
+    "### 3. For newspapers with known QID, extract their geographical information"
    ]
   },
   {
@@ -540,8 +473,7 @@
     }
    ],
    "source": [
-    "print(extract_geographical_properties('Q7956286'))\n",
-    "print(extract_geographical_properties('Q6334998'))"
+    "print(extract_geographical_properties('Q7956286'))"
    ]
   },
   {
@@ -697,7 +629,6 @@
    ],
    "source": [
     "df = pd.read_csv('processed_data/newspaper-owner.csv')\n",
-    "\n",
     "df = df.fillna('')\n",
     "df"
    ]
@@ -9249,35 +9180,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 181,
-   "id": "c9e51e09",
+   "cell_type": "markdown",
+   "id": "7f6b4695",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7362"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(geographical_infos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "id": "5cafaa79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('processed_data/newspaper_geo_info.pickle', 'wb') as handle:\n",
-    "    pickle.dump(geographical_infos, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+    "#### Save to disk "
    ]
   },
   {
@@ -9297,58 +9204,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 59,
    "id": "9a6a0c7b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "country\n",
-       "United States of America                       491\n",
-       "United Kingdom                                  95\n",
-       "Canada                                          71\n",
-       "Australia                                       22\n",
-       "India                                            8\n",
-       "New Zealand                                      5\n",
-       "France                                           5\n",
-       "Ireland                                          4\n",
-       "South Africa                                     4\n",
-       "Singapore                                        4\n",
-       "Germany                                          3\n",
-       "Turkey                                           3\n",
-       "Philippines                                      3\n",
-       "Pakistan                                         3\n",
-       "Nigeria                                          2\n",
-       "Israel                                           2\n",
-       "United Kingdom of Great Britain and Ireland      2\n",
-       "Ghana                                            2\n",
-       "People's Republic of China                       2\n",
-       "Japan                                            2\n",
-       "Spain                                            2\n",
-       "Hong Kong                                        1\n",
-       "Ukraine                                          1\n",
-       "Iran                                             1\n",
-       "Switzerland                                      1\n",
-       "Monaco                                           1\n",
-       "Solomon Islands                                  1\n",
-       "Netherlands                                      1\n",
-       "Russia                                           1\n",
-       "Qatar                                            1\n",
-       "Norway                                           1\n",
-       "Bangladesh                                       1\n",
-       "Kuwait                                           1\n",
-       "Jamaica                                          1\n",
+       "United States of America    491\n",
+       "United Kingdom               95\n",
+       "Canada                       71\n",
+       "Australia                    22\n",
+       "India                         8\n",
+       "New Zealand                   5\n",
+       "France                        5\n",
+       "Ireland                       4\n",
+       "South Africa                  4\n",
+       "Singapore                     4\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['owner']!='') & (df['country']!='')].groupby('country').size().sort_values(ascending=False)"
+    "df[(df['owner']!='') & (df['country']!='')].groupby('country').size().sort_values(ascending=False)[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5b50b9",
+   "metadata": {},
+   "source": [
+    "As we can see, most newspapers in the provided data come from the United States of America which is a factor we will take into account in our subsequent study."
    ]
   },
   {
@@ -9356,7 +9249,9 @@
    "id": "b34c8232",
    "metadata": {},
    "source": [
-    "### Exract wikipedia URL of data from QID"
+    "### Extract wikipedia URL of data from QID\n",
+    "\n",
+    "We extracted for each newspaper the link of its corresponding web page but did not make use of such a property in our study as the wikidata entries of the newspaper was sufficient ot gain a good insight of the genre of its publications"
    ]
   },
   {
@@ -19248,14 +19143,6 @@
     "    \n",
     "wikipedia_urls"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dca01d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
