--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "### Load data\n",
-    "We the TF-IDF matrices and the corresponding indexes previously created."
+    "We load the TF-IDF matrices and the corresponding indexes previously created."
    ]
   },
   {
@@ -749,7 +749,7 @@
     "group_owner = set(num_np_by_owner[num_np_by_owner >= MIN_NEWSPAPER_COUNT].index)\n",
     "newspaper_in_group_USA = newspaper_USA[newspaper_USA[\"owner\"].isin(group_owner)].copy()\n",
     "\n",
-    "print(f\"Number of group in USA with {MIN_NEWSPAPER_COUNT} newspaper: {newspaper_in_group_USA['owner'].nunique()}\")\n",
+    "print(f\"Number of group in USA with >={MIN_NEWSPAPER_COUNT} newspaper: {newspaper_in_group_USA['owner'].nunique()}\")\n",
     "print(f\"Representing {len(newspaper_in_group_USA)/len(newspaper_in_group)*100}% of the newspaper in group\")\n",
     "newspaper_in_group_USA"
    ]
@@ -2023,7 +2023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
