--- a/Process_data.ipynb
+++ b/Process_data.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "source": [
     "## Speaker pipeline\n",
-    "From the quote file we create a TFIDF matrix of newspaper x speaker.\n",
+    "From the quote file we create a TF-IDF matrix of newspaper x speaker.\n",
     "1) Create speaker-newspaper dataframe  \n",
     "2) For each speaker preprocess its name and compute the number of times it appeared in the articles  \n",
     "3) Create newspaper set and indexes  \n",
@@ -1252,7 +1252,7 @@
    "metadata": {},
    "source": [
     "### 6) Create TF-IDF matrix and write it to a file\n",
-    "Transform the frequency matrix into a TF-IDF matrix. Each row is normalised and each column is scaled by proportionnaly to the number of newspaper in which the speaker is quoted."
+    "Transform the frequency matrix into a TF-IDF matrix. Each row is normalised and each column is scaled by proportionally to the number of newspaper in which the speaker is quoted. **TODO: c'est pas le contraire?**"
    ]
   },
   {
@@ -3433,7 +3433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
