--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c8aa3f8e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "85b2690c",
    "metadata": {},
    "outputs": [],
@@ -66,12 +66,13 @@
     "with open(PICKLE_TOKEN_TO_INDEX, 'rb') as handle:\n",
     "    token_to_index = pickle.load(handle)\n",
     "    \n",
-    "newspaper_infos = pd.read_csv(FILE_NEWSPAPER_INFOS)"
+    "# newspaper_infos = pd.read_csv(FILE_NEWSPAPER_INFOS)\n",
+    "newspaper_infos = pd.read_csv(FILE_NEWSPAPER_INFOS, encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3f4dd0bf",
    "metadata": {},
    "outputs": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "a61283a6",
    "metadata": {
     "scrolled": true
@@ -252,237 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "a9c71c60",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We have identified the owner of the newspaper for 13.61043194784026% of the data.\n",
-      "Newspapers owned by a group owning at least 3 other newspapers represent 41.91616766467065% of the newspapers with identified owner.\n",
-      "We obtain 46 different groups.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>newspaper</th>\n",
-       "      <th>QID</th>\n",
-       "      <th>website</th>\n",
-       "      <th>owner</th>\n",
-       "      <th>country</th>\n",
-       "      <th>region</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>owner_ID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1045theteam</td>\n",
-       "      <td>Q7956286</td>\n",
-       "      <td>http://www.1045theteam.com</td>\n",
-       "      <td>Townsquare Media</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>42.879000</td>\n",
-       "      <td>-73.863000</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>107jamz</td>\n",
-       "      <td>Q6331512</td>\n",
-       "      <td>http://www.107jamz.com</td>\n",
-       "      <td>Townsquare Media</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Louisiana</td>\n",
-       "      <td>30.202000</td>\n",
-       "      <td>-92.947000</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10news</td>\n",
-       "      <td>Q3191396</td>\n",
-       "      <td>http://www.10news.com/</td>\n",
-       "      <td>E. W. Scripps Company</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>San Diego</td>\n",
-       "      <td>32.838889</td>\n",
-       "      <td>-117.248889</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>13abc</td>\n",
-       "      <td>Q2386816</td>\n",
-       "      <td>http://www.13abc.com/</td>\n",
-       "      <td>Gray Television</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Toledo</td>\n",
-       "      <td>41.651824</td>\n",
-       "      <td>-83.642371</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>247sports</td>\n",
-       "      <td>Q16973497</td>\n",
-       "      <td>https://247sports.com/</td>\n",
-       "      <td>ViacomCBS Streaming</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7269</th>\n",
-       "      <td>www</td>\n",
-       "      <td>Q150248</td>\n",
-       "      <td>https://www.metacritic.com/</td>\n",
-       "      <td>ViacomCBS Streaming</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7285</th>\n",
-       "      <td>wxyz</td>\n",
-       "      <td>Q3564870</td>\n",
-       "      <td>http://www.wxyz.com/</td>\n",
-       "      <td>E. W. Scripps Company</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Detroit</td>\n",
-       "      <td>42.471521</td>\n",
-       "      <td>-83.246925</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7293</th>\n",
-       "      <td>wyrk</td>\n",
-       "      <td>Q7958139</td>\n",
-       "      <td>http://www.wyrk.com</td>\n",
-       "      <td>Townsquare Media</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>42.886000</td>\n",
-       "      <td>-78.873000</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7310</th>\n",
-       "      <td>yardbarker</td>\n",
-       "      <td>Q8049272</td>\n",
-       "      <td>http://www.yardbarker.com/</td>\n",
-       "      <td>Fox Entertainment Group</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7321</th>\n",
-       "      <td>yorkpress</td>\n",
-       "      <td>Q7758091</td>\n",
-       "      <td>http://www.yorkpress.co.uk/</td>\n",
-       "      <td>Newsquest</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>420 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        newspaper        QID                      website  \\\n",
-       "2     1045theteam   Q7956286   http://www.1045theteam.com   \n",
-       "4         107jamz   Q6331512       http://www.107jamz.com   \n",
-       "5          10news   Q3191396       http://www.10news.com/   \n",
-       "8           13abc   Q2386816        http://www.13abc.com/   \n",
-       "16      247sports  Q16973497       https://247sports.com/   \n",
-       "...           ...        ...                          ...   \n",
-       "7269          www    Q150248  https://www.metacritic.com/   \n",
-       "7285         wxyz   Q3564870         http://www.wxyz.com/   \n",
-       "7293         wyrk   Q7958139          http://www.wyrk.com   \n",
-       "7310   yardbarker   Q8049272   http://www.yardbarker.com/   \n",
-       "7321    yorkpress   Q7758091  http://www.yorkpress.co.uk/   \n",
-       "\n",
-       "                        owner                   country         region  \\\n",
-       "2            Townsquare Media  United States of America       New York   \n",
-       "4            Townsquare Media  United States of America      Louisiana   \n",
-       "5       E. W. Scripps Company  United States of America      San Diego   \n",
-       "8             Gray Television  United States of America         Toledo   \n",
-       "16        ViacomCBS Streaming                       NaN            NaN   \n",
-       "...                       ...                       ...            ...   \n",
-       "7269      ViacomCBS Streaming                       NaN            NaN   \n",
-       "7285    E. W. Scripps Company  United States of America        Detroit   \n",
-       "7293         Townsquare Media  United States of America       New York   \n",
-       "7310  Fox Entertainment Group                       NaN  San Francisco   \n",
-       "7321                Newsquest                       NaN            NaN   \n",
-       "\n",
-       "       latitude   longitude  owner_ID  \n",
-       "2     42.879000  -73.863000        38  \n",
-       "4     30.202000  -92.947000        38  \n",
-       "5     32.838889 -117.248889        10  \n",
-       "8     41.651824  -83.642371        18  \n",
-       "16          NaN         NaN        41  \n",
-       "...         ...         ...       ...  \n",
-       "7269        NaN         NaN        41  \n",
-       "7285  42.471521  -83.246925        10  \n",
-       "7293  42.886000  -78.873000        38  \n",
-       "7310        NaN         NaN        12  \n",
-       "7321        NaN         NaN        28  \n",
-       "\n",
-       "[420 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Minimum number of newspaper needed in a group to consider that group\n",
     "MIN_NEWSPAPER_COUNT = 4\n",
@@ -778,7 +552,7 @@
     "    \"\"\"\n",
     "    Create a SVD decomposition of the selected_newspaper in X.\n",
     "    \n",
-    "    selected_newspapers: List of selected newspaperps\n",
+    "    selected_newspapers: List of selected newspapers\n",
     "    newspaper_to_index: mapping from newspaper name to row index in the matrix\n",
     "    X: newspaper representation in high dimension\n",
     "    dim: number of axes after projection\n",
