--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2dd12ee5",
+   "id": "fa0ac9e6",
    "metadata": {},
    "source": [
     "# Le plan: \n",
@@ -22,12 +22,12 @@
     "### 5.2 What's next/would be interesting to do\n",
     "\n",
     "### somewhere:\n",
-    "Indicate that we alternatively the terms speaker/citee, journal/media/newspaper, and group/consortium"
+    "Indicate that we alternatively the terms speaker/citee/quotee, journal/media/newspaper, and group/consortium"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4c773d8e",
+   "id": "1d7653a3",
    "metadata": {},
    "source": [
     "# 1. Intro du sujet: TODO"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321175e8",
+   "id": "28fdb3c1",
    "metadata": {},
    "source": [
     "# 2. Our goal:\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c21280f2",
+   "id": "54b58320",
    "metadata": {},
    "source": [
     "# 3. How we achieve that:\n",
@@ -60,12 +60,13 @@
     "\n",
     "**TODO: commenter la taille  É N O R M E  du dataset qu'on a?**  \n",
     "**TODO: refine last paragraph**\n",
-    "After getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) as well as [unsupervised learning algorithms](https://en.wikipedia.org/wiki/Unsupervised_learning) to cluster media, and see what we find."
+    "After getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) to cluster media, and see what we find.\n",
+    "**TODO: expliquer pk on ne prend qu'une année. E.g. pcque les news changent bcp entre les années, esp with covid / different presidents, ...**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "594acee3",
+   "id": "91d51d08",
    "metadata": {},
    "source": [
     "# 4. But more precisely, what did you do?:"
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6995c98",
+   "id": "617d54e8",
    "metadata": {},
    "source": [
     "### 4.1: data-extension\n",
@@ -83,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "72deac6f",
+   "id": "4dfea30d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e021be50",
+   "id": "118ab205",
    "metadata": {},
    "source": [
     "As you can see, the owners of the media are not indicated here, so we need to extend our dataset with these features.  \n",
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8e0d6ddc",
+   "id": "703511c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "629927c6",
+   "id": "820d8022",
    "metadata": {},
    "source": [
     "### 4.2: Data processing?\n",
@@ -127,13 +128,14 @@
     " * First, cluster according to which speakers are cited in it.\n",
     " * Second, cluster according to the text content of the extracted quotes.\n",
     " \n",
-    "**TODO: see file \"Process_data.ipynb\" for more details**"
+    "**TODO: see file \"Process_data.ipynb\" for more details**\n",
+    "**TODO: do we speak about the distance metrics?**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "41823477",
+   "id": "5080bc33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb4e695",
+   "id": "1289bd86",
    "metadata": {},
    "source": [
     "For both these features, we will first use the [Term Frequency-Inverse Document Frequency](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) method (TF-IDF for short) (**todo: better name?**) before proceeding to further analysis.  \n",
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3099785b",
+   "id": "36ec1cf0",
    "metadata": {},
    "source": [
     "**TODO: maybe a bit long?**\n",
@@ -185,48 +187,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "92eb8c71",
+   "execution_count": 14,
+   "id": "0ab791e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ce serait bien d'avoir je ne sais quelle illustration \n",
-    "# pour laisser le lecteur respirer un peu\n",
-    "# Mais je ne sais pas trop quoi mettre."
+    "# Illustrations: les formes des 2 matrices obtenues, peu importe les coefs\n",
+    "\n",
+    "# Though on peut mettre une petit flèche vers\n",
+    "# la matrice journal-speaker[i, j] par ex."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "07e27c59",
+   "id": "c56e0e0c",
    "metadata": {},
    "source": [
     "### 4.3: Data analysis (the heart of our problem)\n",
     "**TODO: see file \"Analysis.ipynb\" for more details**\n",
     "\n",
-    "Now that we have transformed our data as needed, we go on with the actual *clustering*, and then the *visualization*."
+    "Now that we have processed our data, we need to visualize it.  \n",
+    "The problem is that the data (our TF-IDF matrices) is inherently high-dimensional, so we as humans can't directly visualize it. That is why we transform our matrices using [Singular Value Decomposition](https://en.wikipedia.org/wiki/Singular_value_decomposition) (SVD).\n",
+    "\n",
+    "This transformation should allow us to extract \"[topics](https://en.wikipedia.org/wiki/Topic_model)\", which correspond to the (orthonormal) directions of highest variation and their importance. We can then view the differences between different media along one such topic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fe1fbe38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some illustration of SVD, or maybe of PCA to get the idea?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b878dd53",
+   "id": "02804d5d",
    "metadata": {},
    "source": [
-    "#### 4.3.1: The clustering\n",
-    "**Do we explain the clustering briefly? @jonas @antoine**"
+    "Let us apply this technique on the speakers matrix first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2e13e6f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Illustration des projections qu'on a au départ, avec la séparation géographique."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25a3cc57",
+   "id": "c3c46aa2",
    "metadata": {},
    "source": [
-    "#### 4.3.2: The visualization"
+    "Using the top speakers per axe, we identify the *topics* of the axes:\n",
+    "\n",
+    "| Axis | Max                 | Min                     |\n",
+    "|------|---------------------|-------------------------|\n",
+    "| 0    | Frequent speakers   | Non Frequent speakers   |\n",
+    "| 1    | US speakers         | UK speakers             |\n",
+    "| 2    | Australian speakers | US speakers             |\n",
+    "| 3    | Canadian speakers   | US politician speakers  |\n",
+    "| 4    | Basketball speakers | US politicians speakers |\n",
+    "\n",
+    "As you can see, the speakers are very different in newspapers from different countries which results in clustering mostly based on the country of origin of the newspapers.  \n",
+    "It makes sense: UK-media will cite more UK-speakers, while USA-media will cite more USA-speakers. \n",
+    "\n",
+    "So our clustering works (for example it is easy to recognize journals from the media group *News Corp Australia*), but it is not enough yet. \n",
+    "Indeed, even if one is aware they should get their information from different media, are they really that likely to get it from different countries' media? Of course not, and that might be especially true for American people (**TODO: is there some study that says american are self centered? or at least we can find some about the nb of languages they know.**). \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb456a12",
+   "metadata": {},
+   "source": [
+    "Then let us see if we can differentiate the media *inside one country!*. We will focus on the USA since it is the country with the most data available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c1c7b866",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show the list of plots \"speaker with only USA\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7191b87",
+   "metadata": {},
+   "source": [
+    "Again we can try and extract the *topics* from the list of top speakers per axe:\n",
+    "\n",
+    "| Axis | Max                             | Min                                              |\n",
+    "|------|---------------------------------|--------------------------------------------------|\n",
+    "| 0    | Frequent speakers               | Non Frequent speakers                          |\n",
+    "| 1    | Sport coaches of Los Angeles    | West coast personalities                       |\n",
+    "| 2    | Sport coaches of San Francisco  | Sport coaches/DJ of Los Angeles                |\n",
+    "\n",
+    "We also see (in bright green) that journals from *Townsquare Media* explain most of the variance of several axes, namely the 3rd and the 4th.  \n",
+    "Hence although we can visually recognize media from this group, it might be interesting to redo our analysis while removing media from this group."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5d5eeb",
+   "id": "ad44ed3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -234,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccddef6d",
+   "id": "3253591d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -242,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ea19fe",
+   "id": "aee5fba3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7584eb07",
+   "id": "ea4465ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfdfae3c",
+   "id": "a9916f6a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -266,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e19233",
+   "id": "a2cecc4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -274,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "408d484f",
+   "id": "0c6a1535",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a8b5b7",
+   "id": "ce7c3d03",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -290,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "899e6e16",
+   "id": "a7d2a94f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4349cd49",
+   "id": "2677be7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -306,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae8cc527",
+   "id": "2528093b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -314,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392847c8",
+   "id": "4057c33f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -322,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e56a12a",
+   "id": "c939e6b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -330,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22bdbe61",
+   "id": "8d19be60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -338,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d4dad2",
+   "id": "809f4f46",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1e7fced",
+   "id": "c2460d07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -354,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d4c737c",
+   "id": "d4f09f9d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -362,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e343f049",
+   "id": "99ed51b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -370,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "687f8570",
+   "id": "15fd50ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -378,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cc21e28",
+   "id": "93e6c38c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -386,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4397a60f",
+   "id": "5db9e5f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -394,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f324da25",
+   "id": "b2232fd9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -402,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0d5d46e",
+   "id": "a9155a62",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -410,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdba5cf4",
+   "id": "6c6714a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -418,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f913f8",
+   "id": "910b2d3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -426,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4638d686",
+   "id": "1b6eca78",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -434,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78132236",
+   "id": "00398eb7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -442,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fbe7cae",
+   "id": "625ab823",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -450,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b462ae4",
+   "id": "dee48f12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -458,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dbaf0c9",
+   "id": "d0572f4a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -466,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69dd25e",
+   "id": "318c1fdc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -474,7 +549,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12228c95",
+   "id": "88038153",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d1b57ce",
    "metadata": {},
    "outputs": [],
    "source": []
